resolved contrast accessbility issues

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -9,13 +9,10 @@
 .dark #home .container {
   border: none;
 }
+
 .dark,
 .dark .container {
   border: none;
-}
-.dark,
-.dark .text-muted {
-  color: #ffffff !important;
 }
 
 /* Nav */
@@ -57,6 +54,13 @@
 .dark .secondary-button {
   color: #f1f1f1;
 }
+
+.dark,
+.dark .title-role,
+.dark .intro-text,
+.dark .contact-sub-text {
+  color: #a6a2a2;
+}
 /* Portfolio */
 
 .dark,
@@ -67,6 +71,11 @@
 .dark,
 .dark .portfolio-intro {
   color: #ffffff;
+}
+
+.dark, 
+.dark .step {
+  color: #d18db2;
 }
 
 /* Contact Page */
